--- a/css/styles.css
+++ b/css/styles.css
@@ -41,5 +41,17 @@ margin: 100px 0px;
 }
 
 .why-us{
-    margin: 100px 0px;
+    margin: 200px 0px;
+}
+
+.stats{
+    margin:100px 0;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)) , url(../images/info_banner.png);
+    color: white;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 400px;
+}
+.stats-data{
+    padding: 200px 0;
 }
