--- a/css/styles.css
+++ b/css/styles.css
@@ -1,53 +1,64 @@
-
-.banner{
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("../images/banner.png");
+.banner {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/banner.png");
     height: 90vh;
-    
-
+    background-position: 50% 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
-#navbarContent li{
+
+#navbarContent li {
     padding: 10px;
 }
+
 .navbar-light .navbar-nav .nav-link {
-    color:white;
+    color: white;
     font-weight: bold;
 }
 
-.banner-text{
-   text-transform: capitalize;
-   background: transparent;
-   padding :12rem 2rem;
-
+.banner-text {
+    text-transform: capitalize;
+    background: transparent;
+    padding: 12rem 2rem;
 }
 
-.round{
+.round {
     border-radius: 50px;
-    display: block;
-    padding:10px 30px;
-    margin:2px;
+    padding: 10px 30px;
 }
 
-.about-us-heading{
-margin: 100px 0px;
+.heading {
+    margin: 100px 0px;
 }
 
-.myCard{
-    margin: 15px;
+.myCard {
+    margin: 25px 0px;
 }
 
-
-.why-us{
-    margin: 200px 0px;
-}
-
-.stats{
-    margin:100px 0;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)) , url(../images/info_banner.png);
+.stats {
+    margin: 100px 0;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/counter.png);
     color: white;
     background-repeat: no-repeat;
     background-size: cover;
     height: 400px;
 }
-.stats-data{
+
+.stats-data {
     padding: 200px 0;
+}
+
+.testimony {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/testimony/testmonial.png");
+    background-position: 50% 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: white;
+}
+
+.testimony-data {
+    padding: 80px 0px;
+}
+
+.quote-icon {
+    font-size: 90px;
 }
