added call us banner

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@
 }
 
 .stats-data {
-    padding: 200px 0;
+    padding: 15% 0;
 }
 
 .testimony {
@@ -61,4 +61,21 @@
 
 .quote-icon {
     font-size: 90px;
+}
+
+.mybutton {
+    padding: 10px 150px;
+    margin: 20px 0px;
+}
+
+.call-us {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/info_banner.png");
+    background-position: 50% 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: white;
+}
+
+.call-us-text {
+    background: transparent;
 }
