--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 .banner {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/banner.png");
-    height: 90vh;
+    height: 100vh;
     background-position: 50% 50%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -8,6 +8,11 @@
 
 #navbarContent li {
     padding: 10px;
+}
+
+.line {
+    height: 10px;
+    background-color: green;
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -53,6 +58,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
+    margin: 10% 0;
 }
 
 .testimony-data {
